fix: uploaded media nested under /sections/<section id>/
